# rust-alice-types

./: .gitignore  Cargo.toml  Dockerfile  README.md  dummy.rs
src/: errors.rs  lib.rs  request.rs  response.rs  yandex_types.rs
src/request/: mod.rs
src/tests/: request.rs
